statusyml/cachet.yml
apiVersion: v1
kind: Service
metadata:
  name: incident-page
spec:
  type: NodePort
  selector:
    app: incident-page
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30800
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: kuma-pvc
#   labels:
#     app: incident-page
# spec:
#   resources:
#     requests:
#       storage: "500m"
#   accessModes:
#     - ReadWriteOnce
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachet
  labels: 
    app: incident-page
spec:
  selector:
    matchLabels:
      app: incident-page
  template:
    metadata:
      labels:
        app: incident-page
    spec:
      containers:
      - name: cachet
        image: khoatd257/cachet_cus:0.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
