statusyml/kuma.yml
apiVersion: v1
kind: Service
metadata:
  name: status-page
spec:
  type: NodePort
  selector:
    app: status-page
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30301
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuma-status
  labels: 
    app: status-page
spec:
  selector:
    matchLabels:
      app: status-page
  template:
    metadata:
      labels:
        app: status-page
    spec:
      containers:
      - name: kuma-status
        image: khoatd257/status_page:0.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3001
        volumeMounts:
        - name: kuma-ps
          mountPath: /app/data
      volumes:
        - name: kuma-ps
          persistentVolumeClaim:
            claimName: kuma-pvc
