statusyml/postgresql.yml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: NodePort
  selector:
    app: postgresql
  ports:
  - port: 5432  
    targetPort: 5432
    nodePort: 30432
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: kuma-pvc
#   labels:
#     app: postgresql
# spec:
#   resources:
#     requests:
#       storage: "500m"
#   accessModes:
#     - ReadWriteOnce
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels: 
    app: postgresql
spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:12-alpine
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
