statusyml/test-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    kubernetes.io/ingress.class: public
spec:
  rules:
  - host: "nginx-status.test"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: http-test-svc
            port: 
              number: 80
  - host: kuma-status.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: status-page
            port: 
              number: 3001
